# SlopDetector

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
ai_detector/: __init__.py  cli.py  ensemble.py  heatmap.py  report.py
ai_detector/analyzers/: __init__.py  base.py  c2pa.py  claude.py  ela.py  gemini.py  hive.py  metadata.py  ml.py  noise.py  spectral.py
app/: gradio_app.py  main.py
app/static/: index.html
tests/: test_analyzers.py
training/: add_real_photos.py  best_model.pt  download_real_photos.py  train.py
